opam-version: "1.2"
name: "color"
maintainer: "anuragsoni.13@gmail.com"
authors: ["Anurag Soni"]
homepage: "https://github.com/anuragsoni/color"
dev-repo: "git+https://github.com/anuragsoni/color.git"
bug-reports: "https://github.com/anuragsoni/color/issues"
doc: "https://anuragsoni.github.io/color/"
license: "MIT"

build: [
  ["dune" "subst" "-p" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "alcotest" {test}
]

available: [
  ocaml-version >= "4.06.0"
]
