opam-version: "1.2"
name: "color"
maintainer: "anuragsoni.13@gmail.com"
authors: ["Anurag Soni"]
homepage: "https://github.com/anuragsoni/color"
dev-repo: "git+https://github.com/anuragsoni/color.git"
bug-reports: "https://github.com/anuragsoni/color/issues"
doc: "https://anuragsoni.github.io/color/"
license: "MIT"

build: [
  "dune" "build"
]

depends: [
  "dune" {build}
  "alcotest" {test}
  "gg"
]

available: [
  ocaml-version >= "4.06.0"
]
