opam-version: "2.0"
name: "color"
maintainer: "anuragsoni.13@gmail.com"
authors: ["Anurag Soni" "Ambre Austen Suhamy"]
homepage: "https://github.com/anuragsoni/color"
dev-repo: "git+https://github.com/anuragsoni/color.git"
bug-reports: "https://github.com/anuragsoni/color/issues"
doc: "https://anuragsoni.github.io/color/doc"
license: "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "alcotest" {with-test}
  "gg"
]
